docs: add Swagger for role; refactor role routes
